{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 329,
  "lineage": "f918e569-8653-e85c-35dd-46c0948f7c57",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:security-group/sg-02ee47b993ad35028",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "sg-02ee47b993ad35028",
            "name": "default",
            "tags": {
              "divvy_last_modified": "None",
              "divvy_last_modified_by": "awabisabi@confluent.io",
              "divvy_owner_email": "None"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4195dac60ff381b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:vpc/vpc-0c4195dac60ff381b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04d57dfb96a2212dc",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-04afacb653dc8bb66",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4195dac60ff381b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0163e426f46dec136",
            "owner_id": "550017254839",
            "tags": {
              "divvy_last_modified": "None",
              "divvy_last_modified_by": "None",
              "divvy_owner_email": "None",
              "name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:internet-gateway/igw-04b95d7745681c8ca",
            "id": "igw-04b95d7745681c8ca",
            "owner_id": "550017254839",
            "tags_all": {
              "Created_by": "Shift-left Terraform script",
              "Project": "Shift-left Demo",
              "owner_email": "azamzam@confluent.io"
            },
            "vpc_id": "vpc-0e058f91730eb6826"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:route-table/rtb-06d7b5ae526351a7d",
            "id": "rtb-06d7b5ae526351a7d",
            "owner_id": "550017254839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b95d7745681c8ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Created_by": "Shift-left Terraform script",
              "Project": "Shift-left Demo",
              "owner_email": "azamzam@confluent.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e058f91730eb6826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09689899230146b3e",
            "route_table_id": "rtb-06d7b5ae526351a7d",
            "subnet_id": "subnet-083ba5e7a1700b87d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:security-group/sg-0e52c301a512fd331",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e52c301a512fd331",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241023103541653000000001",
            "name_prefix": "terraform-",
            "owner_id": "550017254839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Created_by": "Shift-left Terraform script",
              "Project": "Shift-left Demo",
              "owner_email": "azamzam@confluent.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e058f91730eb6826"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_inbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-3991081066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ee47b993ad35028",
            "security_group_rule_id": "sgr-05680219e52f20689",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1363468246",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ee47b993ad35028",
            "security_group_rule_id": "sgr-02e1f7be1a01dae31",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:subnet/subnet-083ba5e7a1700b87d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083ba5e7a1700b87d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Created_by": "Shift-left Terraform script",
              "Project": "Shift-left Demo",
              "owner_email": "azamzam@confluent.io"
            },
            "vpc_id": "vpc-0e058f91730eb6826"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:550017254839:vpc/vpc-0e058f91730eb6826",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06fcc81d079bd32dd",
            "default_route_table_id": "rtb-09a1fff409e501de0",
            "default_security_group_id": "sg-083c7692c679666db",
            "dhcp_options_id": "dopt-04afacb653dc8bb66",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e058f91730eb6826",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a1fff409e501de0",
            "owner_id": "550017254839",
            "tags_all": {
              "Created_by": "Shift-left Terraform script",
              "Project": "Shift-left Demo",
              "owner_email": "azamzam@confluent.io"
            }
          }
        }
      ]
    }
  ]
}